--- a/src/main/java/org/example/static/pages/login.html
+++ b/src/main/java/org/example/static/pages/login.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../sources/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="../sources/js/jquery-1.11.0.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../sources/bootstrap/css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="../sources/css/components.css" type="text/css"/>
     <link rel="stylesheet" href="../sources/css/login.css" type="text/css"/>
-    <title>getotp</title>
+    <title>用户登陆</title>
 </head>
 <body class="login">
 <div class="content">
-    <h3 class="form-title">获取otp信息</h3>
+    <h3 class="form-title">用户登陆</h3>
     <div class="form-group">
         <label class="control-label">手机号</label>
         <div>
@@ -20,40 +20,59 @@
             <input class="form-control" type="text" placeholder="手机号" name="telephone" id="telephone">
         </div>
     </div>
+    <div class="form-group">
+        <label class="control-label">密码</label>
+        <div>
+            <input class="form-control" type="password" placeholder="密码" name="password" id="password">
+        </div>
+    </div>
     <div class="form-actions">
-        <button class="btn blue" id="getotp" type="submit">
-            获取otp短信
+        <button class="btn blue" id="login" type="submit">
+            登陆
+        </button>
+        <button class="btn green" id="register" type="submit">
+            注册
         </button>
     </div>
 </div>
 </body>
 <script>
     jQuery(document).ready(function () {
+        $("#register").on("click",function (){
+            window.location.href="getotp.html";
+        });
+
         //绑定otp的click事件用于向后端发送获取手机验证码的请求
-        $("#getotp").on("click",function () {
+        $("#login").on("click",function () {
             var telephone=$("#telephone").val();
+            var password=$("#password").val();
             if(telephone==null || telephone==""){
                 alert("手机号不能为空");
+                return false;
+            }
+            if(password==null || password==""){
+                alert("密码不能为空");
                 return false;
             }
             $.ajax({
                 type:"POST",
                 contentType:"application/x-www-form-urlencoded",
-                url:"http://localhost:8090/user/getotp",
+                url:"http://localhost:8090/user/login",
                 data:{
                     "telephone":$("#telephone").val(),
+                    "password":password
                 },
                 xhrFields:{withCredentials:true},
                 success:function(data){
                     if (data.status == "success") {
-                        alert("otp已经发送到了您的手机，请注意查收");
-                        window.location.href="file:///E:/Project/javaScriptprojet/register.html"
+                        alert("登陆成功");
+                        //window.location.href="file:///E:/Project/javaScriptprojet/register.html"
                     }else{
-                        alert("otp发送失败，原因为"+data.data.errMsg);
+                        alert("登陆失败，原因为"+data.data.errMsg);
                     }
                 },
                 error:function(data){
-                    alert("otp发送失败，原因为"+data.responseText);
+                    alert("登陆失败，原因为"+data.responseText);
                 }
             });
             return false;
