--- a/src/main/java/org/example/static/pages/login.html
+++ b/src/main/java/org/example/static/pages/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../sources/js/jquery-1.11.0.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="../sources/bootstrap/css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../sources/css/components.css" type="text/css"/>
-    <link rel="stylesheet" href="../sources/css/login.css" type="text/css"/>
+    <script src="source/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="source/bootstrap/css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="source/css/components.css" type="text/css"/>
+    <link rel="stylesheet" href="source/css/login.css" type="text/css"/>
     <title>用户登陆</title>
 </head>
 <body class="login">
@@ -23,6 +23,7 @@
     <div class="form-group">
         <label class="control-label">密码</label>
         <div>
+
             <input class="form-control" type="password" placeholder="密码" name="password" id="password">
         </div>
     </div>
@@ -59,13 +60,14 @@
                 contentType:"application/x-www-form-urlencoded",
                 url:"http://localhost:8090/user/login",
                 data:{
-                    "telephone":$("#telephone").val(),
+                    "telephone":telephone,
                     "password":password
                 },
                 xhrFields:{withCredentials:true},
                 success:function(data){
                     if (data.status == "success") {
                         alert("登陆成功");
+                        window.location.href="listItem.html";
                         //window.location.href="file:///E:/Project/javaScriptprojet/register.html"
                     }else{
                         alert("登陆失败，原因为"+data.data.errMsg);
