--- a/src/main/java/org/example/static/pages/register.html
+++ b/src/main/java/org/example/static/pages/register.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../sources/jquery-1.11.0.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="../sources/bootstrap/css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../sources/css/components.css" type="text/css"/>
-    <link rel="stylesheet" href="../sources/css/login.css" type="text/css"/>
+    <script src="source/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="source/bootstrap/css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="source/css/components.css" type="text/css"/>
+    <link rel="stylesheet" href="source/css/login.css" type="text/css"/>
     <title>用户注册</title>
 </head>
 <body class="login">
@@ -78,7 +78,7 @@
                 return false;
             }
             if(age==null || age==""){
-                alert("手机号不能为空");
+                alert("年龄不能为空");
                 return false;
             }
             if(password==null || password==""){
