--- a/src/main/java/org/example/static/pages/login.html
+++ b/src/main/java/org/example/static/pages/login.html
@@ -67,6 +67,9 @@
                 success:function(data){
                     if (data.status == "success") {
                         alert("登陆成功");
+                        // 引入登录的token后，需添加以下部分
+                        var token=data.data;
+                        window.localStorage["token"]=token;
                         window.location.href="listItem.html";
                         //window.location.href="file:///E:/Project/javaScriptprojet/register.html"
                     }else{
